Updates on multi-module project structure